--- a/odoo/src/custom-addons/osi-loans/views/views.xml
+++ b/odoo/src/custom-addons/osi-loans/views/views.xml
@@ -1,5 +1,19 @@
 <odoo>
     <data>
+        <!-- explicit list view definition -->
+
+<!--        <record model="ir.ui.view" id="osi-loans.list">-->
+<!--            <field name="name">OSI-Loans list</field>-->
+<!--            <field name="model">new.applicant</field>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <tree>-->
+<!--                    <field name="name"/>-->
+<!--                    <field name="value"/>-->
+<!--                    <field name="value2"/>-->
+<!--                </tree>-->
+<!--            </field>-->
+<!--        </record>-->
+
 
         <!-- actions opening views on models -->
 
@@ -8,6 +22,22 @@
             <field name="res_model">new.applicant</field>
             <field name="view_mode">tree,form</field>
         </record>
+
+
+        <!-- server action to the one above -->
+
+<!--        <record model="ir.actions.server" id="osi-loans.action_server">-->
+<!--            <field name="name">OSI-Loans server</field>-->
+<!--            <field name="model_id" ref="model_osi-loans_osi-loans"/>-->
+<!--            <field name="state">code</field>-->
+<!--            <field name="code">-->
+<!--                action = {-->
+<!--                "type": "ir.actions.act_window",-->
+<!--                "view_mode": "tree,form",-->
+<!--                "res_model": model._name,-->
+<!--                }-->
+<!--            </field>-->
+<!--        </record>-->
 
 
         <!-- Top menu item -->
@@ -30,8 +60,8 @@
 
         <menuitem name="Loan Options" id="osi-loans.menu_4_list" parent="osi-loans.menu_2"
                   action="osi-loans.action_window"/>
-            <menuitem name="Server to list" id="osi-loans" parent="osi-loans.menu_2"
-                      action="osi-loans.action_server"/>
+<!--            <menuitem name="Server to list" id="osi-loans" parent="osi-loans.menu_2"-->
+<!--                      action="osi-loans.action_server"/>-->
 
     </data>
 </odoo>
