--- a/odoo/src/custom-addons/osi-loans/views/views.xml
+++ b/odoo/src/custom-addons/osi-loans/views/views.xml
@@ -2,17 +2,42 @@
     <data>
         <!-- explicit list view definition -->
 
-<!--        <record model="ir.ui.view" id="osi-loans.list">-->
-<!--            <field name="name">OSI-Loans list</field>-->
-<!--            <field name="model">new.applicant</field>-->
-<!--            <field name="arch" type="xml">-->
-<!--                <tree>-->
-<!--                    <field name="name"/>-->
-<!--                    <field name="value"/>-->
-<!--                    <field name="value2"/>-->
-<!--                </tree>-->
-<!--            </field>-->
-<!--        </record>-->
+        <!--        <record model="ir.ui.view" id="osi-loans.list">-->
+        <!--            <field name="name">OSI-Loans list</field>-->
+        <!--            <field name="model">new.applicant</field>-->
+        <!--            <field name="arch" type="xml">-->
+        <!--                <tree>-->
+        <!--                    <field name="name"/>-->
+        <!--                    <field name="value"/>-->
+        <!--                    <field name="value2"/>-->
+        <!--                </tree>-->
+        <!--            </field>-->
+        <!--        </record>-->
+
+        <!--    adds custom tree list/view to this file-->
+
+        <record id="library_book_view_tree" model="ir.ui.view">
+            <field name="name">Applicants</field>
+            <field name="model">new.applicant</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="fname"/>
+                    <field name="lname"/>
+                    <field name="dob"/>
+                    <field name="phone"/>
+                    <field name="email"/>
+                    <field name="street_address"/>
+                    <field name="street_address2"/>
+                    <field name="state"/>
+                    <field name="zip"/>
+                    <field name="ssn"/>
+                    <field name="employment_status"/>
+                    <field name="monthly_income"/>
+                    <field name="employer"/>
+                    <field name="employer_number"/>
+                </tree>
+            </field>
+        </record>
 
 
         <!-- actions opening views on models -->
@@ -26,18 +51,18 @@
 
         <!-- server action to the one above -->
 
-<!--        <record model="ir.actions.server" id="osi-loans.action_server">-->
-<!--            <field name="name">OSI-Loans server</field>-->
-<!--            <field name="model_id" ref="model_osi-loans_osi-loans"/>-->
-<!--            <field name="state">code</field>-->
-<!--            <field name="code">-->
-<!--                action = {-->
-<!--                "type": "ir.actions.act_window",-->
-<!--                "view_mode": "tree,form",-->
-<!--                "res_model": model._name,-->
-<!--                }-->
-<!--            </field>-->
-<!--        </record>-->
+        <!--        <record model="ir.actions.server" id="osi-loans.action_server">-->
+        <!--            <field name="name">OSI-Loans server</field>-->
+        <!--            <field name="model_id" ref="model_osi-loans_osi-loans"/>-->
+        <!--            <field name="state">code</field>-->
+        <!--            <field name="code">-->
+        <!--                action = {-->
+        <!--                "type": "ir.actions.act_window",-->
+        <!--                "view_mode": "tree,form",-->
+        <!--                "res_model": model._name,-->
+        <!--                }-->
+        <!--            </field>-->
+        <!--        </record>-->
 
 
         <!-- Top menu item -->
@@ -60,8 +85,8 @@
 
         <menuitem name="Loan Options" id="osi-loans.menu_4_list" parent="osi-loans.menu_2"
                   action="osi-loans.action_window"/>
-<!--            <menuitem name="Server to list" id="osi-loans" parent="osi-loans.menu_2"-->
-<!--                      action="osi-loans.action_server"/>-->
+        <!--            <menuitem name="Server to list" id="osi-loans" parent="osi-loans.menu_2"-->
+        <!--                      action="osi-loans.action_server"/>-->
 
     </data>
 </odoo>
