[ADD] added new views and models to application [UPDATE] updated the manifest file to include these

--- a/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
@@ -29,6 +29,7 @@
                     <field name="street_address"/>
                     <field name="street_address2"/>
                     <field name="state"/>
+                    <field name="city"/>
                     <field name="zip"/>
                     <field name="ssn"/>
                     <field name="employment_status"/>
