--- a/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
@@ -1,22 +1,9 @@
 <odoo>
     <data>
-        <!-- explicit list view definition -->
-
-        <!--        <record model="ir.ui.view" id="osi-loans.list">-->
-        <!--            <field name="name">OSI-Loans list</field>-->
-        <!--            <field name="model">new.applicant</field>-->
-        <!--            <field name="arch" type="xml">-->
-        <!--                <tree>-->
-        <!--                    <field name="name"/>-->
-        <!--                    <field name="value"/>-->
-        <!--                    <field name="value2"/>-->
-        <!--                </tree>-->
-        <!--            </field>-->
-        <!--        </record>-->
 
         <!--    adds custom tree list/view to this file-->
 
-        <record id="library_book_view_tree" model="ir.ui.view">
+        <record id="osi_loans_view_tree" model="ir.ui.view">
             <field name="name">Applicants</field>
             <field name="model">new.applicant</field>
             <field name="arch" type="xml">
@@ -64,9 +51,6 @@
         <menuitem name="Loans" id="osi-loans.menu_2" parent="osi-loans.menu_root"/>
 
         <!-- actions -->
-
-        <menuitem name="Create Applicant" id="osi-loans.menu_1_list" parent="osi-loans.menu_1"
-                  action="osi-loans.action_window"/>
         <menuitem name="New Application" id="osi-loans.menu_2_list" parent="osi-loans.menu_1"
                   action="osi-loans.action_window"/>
         <menuitem name="Open Applications" id="osi-loans.menu_3_list" parent="osi-loans.menu_1"
@@ -74,8 +58,5 @@
 
         <menuitem name="Loan Options" id="osi-loans.menu_4_list" parent="osi-loans.menu_2"
                   action="osi-loans.action_window"/>
-        <!--            <menuitem name="Server to list" id="osi-loans" parent="osi-loans.menu_2"-->
-        <!--                      action="osi-loans.action_server"/>-->
-
     </data>
 </odoo>
