[FIX]  XMLSyntaxError: Comment not terminated, line 31, column 1

--- a/odoo/src/custom-addons/osi-loans/views/create_application.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_application.xml
@@ -25,6 +25,6 @@
             </field>
         </record>
 
-        <!-- actions opening views on models
+        <!-- actions opening views on models -->
     </data>
 </odoo>
