--- a/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
@@ -48,7 +48,7 @@
         <!-- actions opening views on models -->
         <record id="loan.action_window" model="ir.actions.act_window">
             <field name="name">Applicants</field>
-            <field name="res_model">new.applicant</field>
+            <field name="res_model">loan.options</field>
             <field name="view_mode">tree,form</field>
         </record>
 
