[FIX]  relocated menu items

--- a/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
@@ -1,9 +1,29 @@
 <odoo>
     <data>
 
+            <!-- actions opening views on models -->
+        <record id="applicant.action_window" model="ir.actions.act_window">
+            <field name="name">Applicants</field>
+            <field name="res_model">new.applicant</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <!-- actions opening views on models -->
+        <record id="loan.action_window" model="ir.actions.act_window">
+            <field name="name">Loans</field>
+            <field name="res_model">loan.options</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <!-- Top menu item -->
+        <menuitem name="OSI-Loans" id="osi-loans.menu_root"/>
+
+        <!-- menu categories -->
+        <menuitem name="Applications" id="osi-loans.applications" parent="osi-loans.menu_root" action="applicant.action_window"/>
+        <menuitem name="Loans" id="osi-loans.loans" parent="osi-loans.menu_root" action="loan.action_window"/>
         <!--    adds custom tree list/view to this file-->
 
-        <record id="osi_loans_view_tree" model="ir.ui.view">
+        <record id="osi_loans_view_form" model="ir.ui.view">
             <field name="name">Applicants</field>
             <field name="model">new.applicant</field>
             <field name="arch" type="xml">
@@ -27,36 +47,5 @@
             </field>
         </record>
 
-
-<!--        <record id='library_book_action' model='ir.actions.act_window'>-->
-<!--            <field name="name">Library Books</field>-->
-<!--            <field name="res_model">library.book</field>-->
-<!--            <field name="view_mode">tree,form</field>-->
-<!--        </record>-->
-<!--      -->
-<!--        <menuitem name="My Library" id="library_base_menu"/>-->
-<!--        <menuitem name="Books" id="library_book_menu"-->
-<!--                  parent="library_base_menu" action="library_book_action"/>-->
-
-        <!-- actions opening views on models -->
-        <record id="applicant.action_window" model="ir.actions.act_window">
-            <field name="name">Applicants</field>
-            <field name="res_model">new.applicant</field>
-            <field name="view_mode">form</field>
-        </record>
-
-        <!-- actions opening views on models -->
-        <record id="loan.action_window" model="ir.actions.act_window">
-            <field name="name">Loans</field>
-            <field name="res_model">loan.options</field>
-            <field name="view_mode">tree,form</field>
-        </record>
-
-        <!-- Top menu item -->
-        <menuitem name="OSI-Loans" id="osi-loans.menu_root"/>
-
-        <!-- menu categories -->
-        <menuitem name="Applications" id="osi-loans.applications" parent="osi-loans.menu_root" action="applicant.action_window"/>
-        <menuitem name="Loans" id="osi-loans.loans" parent="osi-loans.menu_root" action="loan.action_window"/>
     </data>
 </odoo>
