--- a/odoo/src/custom-addons/osi-loans/views/create_application.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_application.xml
@@ -1,14 +1,14 @@
 <odoo>
     <data>
-         <!-- actions opening views on models -->
-        <record id="applicant.action_window" model="ir.actions.act_window">
+           <!-- actions opening views on models -->
+        <record id="applicant_action" model="ir.actions.act_window">
             <field name="name">Applicants</field>
             <field name="res_model">new.applicant</field>
-            <field name="view_mode">form</field>
+            <field name="view_mode">tree,form</field>
         </record>
 
         <!-- actions opening views on models -->
-        <record id="loan.action_window" model="ir.actions.act_window">
+        <record id="loan_action" model="ir.actions.act_window">
             <field name="name">Loans</field>
             <field name="res_model">loan.options</field>
             <field name="view_mode">tree,form</field>
@@ -18,8 +18,8 @@
         <menuitem name="OSI-Loans" id="osi-loans.menu_root"/>
 
         <!-- menu categories -->
-        <menuitem name="Applications" id="osi-loans.applications" parent="osi-loans.menu_root" action="applicant.action_window"/>
-        <menuitem name="Loans" id="osi-loans.loans" parent="osi-loans.menu_root" action="loan.action_window"/>
+        <menuitem name="Applications" id="osi-loans.applications" parent="osi-loans.menu_root" action="applicant_action"/>
+        <menuitem name="Loans" id="osi-loans.loans" parent="osi-loans.menu_root" action="loan_action"/>
 
         <record id="new_application_view_tree" model="ir.ui.view">
             <field name="name">Loan Application</field>
