--- a/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_applicant.xml
@@ -31,7 +31,7 @@
         <menuitem name="Loans" id="osi-loans.loans" parent="osi-loans.menu_root" action="loan_action"/>
 
 
-        <record id="osi_loans_view_form" model="ir.ui.view">
+        <record id="osi_loans_view_tree" model="ir.ui.view">
             <field name="name">New Applicant Form</field>
             <field name="model">new.applicant</field>
             <field name="arch" type="xml">
