--- a/odoo/src/custom-addons/osi-loans/views/create_application.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_application.xml
@@ -29,19 +29,32 @@
         <menuitem name="Applications" id="osi-loans.applications" parent="osi-loans.menu_root" action="application_action"/>
         <menuitem name="Loans" id="osi-loans.loans" parent="osi-loans.menu_root" action="loan_action"/>
 
-        <record id="new_application_view_tree" model="ir.ui.view">
+        <record id="new_application_view_form" model="ir.ui.view">
             <field name="name">Loan Application</field>
             <field name="model">new.application</field>
             <field name="arch" type="xml">
                 <form>
                     <header>
-                        <field name="state" widget="statusbar" statusbar_visible="Draft,Submitted,Reviewed"/>
+                         <field name="state" widget="statusbar" clickable="True"/>
                     </header>
                     <field name="applicant"/>
                     <field name="loan_type"/>
                     <field name="loan_term"/>
                     <field name="state"/>
                 </form>
+            </field>
+        </record>
+
+        <record id="new_application_view_tree" model="ir.ui.view">
+            <field name="name">Loan Application</field>
+            <field name="model">new.application</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="applicant"/>
+                    <field name="loan_term"/>
+                    <field name="loan_type"/>
+                    <field name="loan_term"/>
+                </tree>
             </field>
         </record>
 
