[FIX] fixed applicant view

--- a/odoo/src/custom-addons/osi-loans/views/create_application.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_application.xml
@@ -53,7 +53,7 @@
                     <field name="applicant" />
                     <field name="loan_type" />
                     <field name="loan_term"/>
-                    <field name="loan_term"/>
+                    <field name="state"/>
                 </tree>
             </field>
         </record>
