--- a/odoo/src/custom-addons/osi-loans/views/create_application.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_application.xml
@@ -35,12 +35,12 @@
             <field name="arch" type="xml">
                 <form>
                     <header>
-                         <field name="state" widget="statusbar" clickable="True"/>
+                         <field name="progress_state" widget="statusbar" clickable="True"/>
                     </header>
                     <field name="applicant" widget="selection"/>
                     <field name="loan_type" widget="selection"/>
                     <field name="loan_term"/>
-                    <field name="state"/>
+                    <field name="progress_state"/>
                 </form>
             </field>
         </record>
@@ -53,7 +53,6 @@
                     <field name="applicant" />
                     <field name="loan_type" />
                     <field name="loan_term"/>
-                    <field name="state"/>
                 </tree>
             </field>
         </record>
