--- a/odoo/src/custom-addons/osi-loans/views/create_application.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_application.xml
@@ -36,7 +36,7 @@
             <field name="arch" type="xml">
                 <form>
                     <header>
-                        <button string="Submit" type="object" name="submit"
+                        <button string="submit" type="object" name="submit"
                                 attrs="{'invisible':[('progress_state','=','submitted')]}"/>
                         <field name="progress_state" widget="statusbar" clickable="True"/>
                     </header>
