--- a/odoo/src/custom-addons/osi-loans/views/create_application.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_application.xml
@@ -37,10 +37,8 @@
                 <form>
                     <header>
                         <button string="Submit" type="object" name="button_submit"
-                                attrs="{'invisible':[('progress_state','=','submit')]}
-
-                        "/>
-                        <field name="progress_state" widget="statusbar" clickable="False"/>
+                                attrs="{'invisible':[('progress_state','=','submit')]}"/>
+                        <field name="progress_state" widget="statusbar" statusbar_visible="dft,submit,approved,rejected"/>
                     </header>
                     <sheet>
                         <group>
