[FIX] incomplete xml tag

--- a/odoo/src/custom-addons/osi-loans/views/create_application.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_application.xml
@@ -62,7 +62,8 @@
                         </group>
 
                         <group>
-                            <
+                            <field name="determined_status"
+                                   attrs="{'invisible':[('progress_state','not in','submit')]}"/>
                         </group>
                     </sheet>
                 </form>
