--- a/odoo/src/custom-addons/osi-loans/views/create_application.xml
+++ b/odoo/src/custom-addons/osi-loans/views/create_application.xml
@@ -62,6 +62,7 @@
                         </group>
 
                         <group>
+                            <field name="applicant_credit" />
                             <field name="determined_status"
                                    attrs="{'invisible':[('progress_state','not in','submit')]}"/>
                         </group>
